[package]
name = "lox-rust"
version = "0.1.0"
authors = ["Christopher Rybicki <crybicki98@gmail.com>"]
edition = "2021"

[lib]
name = "lox_lib"
path = "src/lib.rs"

[[bin]]
name = "lox_bin"
path = "src/bin.rs"

[dependencies]
structopt = "0.3.25"
anyhow = "1.0.44"
log = "0.4.14"
env_logger = "0.9.0"
itertools = "0.10.1"
generational-arena = "0.2.8"
